<resources>
    <string name="app_name">News Dagger2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="first_to_know">First to know</string>
    <string name="app_info">All news in one place, be the \nfirst to know latest news</string>
    <string name="next">Next</string>
    <string name="select_your_favourite_topics">Select your favourite topics</string>
    <string name="select_some_topics_to_let_us">Select some of your favorite topics to let us suggest better news for you.</string>
    <string name="home_menu">Home</string>
    <string name="browse_menu">Categories</string>
    <string name="bookmark_menu">Bookmark</string>
    <string name="profile_menu">Profile</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="uzbek">Uzbek</string>


    <string name="categories">Categories</string>
    <string name="categories_info">Thousands of articles in each category</string>
    <string name="category_sport">🏈 Sports</string>
    <string name="category_politics">⚖️ Politics</string>
    <string name="category_life">🌞 Life</string>
    <string name="category_gaming">🎮   Gaming</string>
    <string name="category_animals">🐻   Animals</string>
    <string name="category_nature">🌴   Nature</string>
    <string name="category_food">🍔   Food</string>
    <string name="category_art">🎨   Art</string>
    <string name="category_history">📜   History</string>
    <string name="category_fashion">👗   Fashion</string>
    <string name="category_covid19">😷   Covid-19</string>
    <string name="category_middle_east">⚔️   Middle East</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_info">Saved articles to the library</string>
    <string name="no_bookmark">You haven\'t saved any articles yet. Start reading and bookmarking them now</string>
    <string name="browse">Browse</string>
    <string name="home_info">Discover things of this world</string>
    <string name="search">Search</string>
    <string name="recommended">Recommended for you</string>
    <string name="see_all">See all</string>
    <string name="share">Share</string>
</resources>