<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackground"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".start.GetStartedFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_margin="54dp"
        android:layout_width="300dp"
        android:layout_height="300dp" />

    <TextView
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="?attr/appTextColor"
        android:textColorHighlight="?appTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_to_know" />

    <TextView
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="?attr/appTextColor"
        android:textColorHighlight="?appTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:backgroundTint="@color/main_color"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_gravity="bottom"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>