<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackground"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".start.SelectFavouriteFragment">

    <TextView
        android:textColor="?attr/appTextColor"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/select_your_favourite_topics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:textColor="?attr/appTextColor"
        android:textSize="18sp"
        android:text="@string/select_some_topics_to_let_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="12dp"
        android:id="@+id/topics_rv"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:backgroundTint="@color/main_color"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_gravity="bottom"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>