<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="?attr/appBackground"
    android:orientation="vertical"
    tools:context=".main.categories.CategoriesFragment">

    <TextView
        android:textSize="24sp"
        android:textColor="?attr/appTextColor"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="16sp"
        android:textColor="?attr/appTextColor"
        android:text="@string/bookmark_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/bookmark_rv"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/no_bookmark_layout"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:scaleType="center"
            android:src="@drawable/ic_no_bookmark"
            android:background="@drawable/no_bookmark_bg"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <TextView
            android:text="@string/no_bookmark"
            android:textColor="?attr/appTextColor"
            android:textSize="22sp"
            android:layout_margin="24dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>