<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/appBackground"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.profile.ProfileFragment">

    <TextView
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="?attr/appTextColor"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:background="@drawable/settings_bg"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/night_mode"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <Switch
            android:id="@+id/night_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@drawable/settings_bg"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:id="@+id/languages_root"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/languages"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <ImageButton
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>