<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackground"
    tools:context=".main.categories.CategoriesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/browse"
            android:textColor="?attr/appTextColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/home_info"
            android:textColor="?attr/appTextColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/settings_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="16dp"-->
<!--                android:src="@drawable/ic_search" />-->

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:textSize="20sp" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_categories_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <ProgressBar
            android:id="@+id/home_news_progress"
            android:layout_width="276dp"
            android:layout_gravity="center"
            android:padding="120dp"
            android:layout_height="276dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_news_rv"
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended"
                android:textColor="?attr/appTextColor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textColor="?attr/appTextColor"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:paddingBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>