<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/appBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".main.profile.LanguagesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bordered_rectangle"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:textSize="22sp"
            android:gravity="left"
            android:text="@string/english"
            android:textColor="#808080"
            android:id="@+id/english_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/english_image_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="16dp"
            android:elevation="10dp"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bordered_rectangle"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:textSize="22sp"
            android:gravity="left"
            android:text="@string/german"
            android:textColor="#808080"
            android:id="@+id/german_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/german_image_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="16dp"
            android:elevation="10dp"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bordered_rectangle"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:textSize="22sp"
            android:gravity="left"
            android:text="@string/russian"
            android:textColor="#808080"
            android:id="@+id/russian_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/russian_image_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="16dp"
            android:elevation="10dp"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bordered_rectangle"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:textSize="22sp"
            android:gravity="left"
            android:text="@string/spanish"
            android:textColor="#808080"
            android:id="@+id/spanish_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/spanish_image_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="16dp"
            android:elevation="10dp"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bordered_rectangle"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:textSize="22sp"
            android:gravity="left"
            android:text="@string/uzbek"
            android:textColor="#808080"
            android:id="@+id/uzbek_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/uzbek_lan_image_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="16dp"
            android:elevation="10dp"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>